fix(css): Add `letter-spacing` to custom overlay

--- a/src/components/map/Map.module.css
+++ b/src/components/map/Map.module.css
@@ -174,6 +174,7 @@ hr {
   border: 2px solid #FA8576;
   border-radius: 20px;
   transform: translate(0px, -90px);
+  letter-spacing: -0.04em;
 }
 
 /*.customOverlay:after {
